# NetworkManager-l2tp

./: AUTHORS  ChangeLog  configure.ac
auth-dialog/: Makefile.am  gnome-two-password-dialog.c  main.c
properties/: Makefile.am  nm-l2tp.c
src/: nm-l2tp-service.c
